<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="usernamehint">Username</string>
    <string name="passwordhint">Password</string>
    <string name="login_button">Log In</string>
    <string name="register_button">Sign Up</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="welcome_to_plastic_precios">Welcome to Plastic Precios</string>
    <string name="tap_the_screen">Tap the screen</string>
    <string name="title_activity_recyclerview">Recyclerview</string>
    <string name="pedidos_disponibles">Available</string>
    <string name="test">message</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_map" />
    <string name="hybrid_map" />
    <string name="satellite_map" />
    <string name="terrain_map" />
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="rewards">Rewards</string>
    <string name="new_product">New Product</string>
    <string name="current_location">Current Location</string>
</resources>