<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/usernameField"
        style="@style/textfield"
        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm"
        android:hint="@string/usernamehint"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passwordField"
        style="@style/textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm"
        android:ems="10"
        android:hint="@string/passwordhint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/signinButtonContainerMarginTop"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            style="@style/signin_button"
            android:layout_width="@dimen/login_button_w"
            android:text="@string/register_button" />

        <Button
            android:id="@+id/button2"
            style="@style/signin_button"
            android:layout_width="@dimen/login_button_w"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="loginButtonClicked"
            android:text="@string/login_button" />
    </LinearLayout>
</LinearLayout>